# margdarshak-backend

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/margdarshak_backend/: __init__.py  main.py
src/margdarshak_backend/api/: __init__.py  horoscope.py  langflow.py  routes.py  user.py
src/margdarshak_backend/core/: config.py  database.py  gemini.py
src/margdarshak_backend/models/: horoscope.py  user.py
tests/: test_routes.py
