[project]
name = "margdarshak-backend"
version = "0.1.0"
description = "FastAPI Backend Template"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "python-dotenv>=1.0.0",
    "langflow>=0.5.3",
    "langchain>=0.0.350",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "ruff>=0.0.291",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
select = ["E", "F", "I", "N"]
ignore = []
line-length = 88
target-version = "py312"
